--- a/fr.tex
+++ b/fr.tex
@@ -16,6 +16,21 @@
 
 % arguments: left column, item, comment
 \newcommand{\mycvitemwithcomment}[3]{\cvitemwithcomment{#1}{\textnormal{#2}}{#3}}
+
+% copied from moderncv install
+% grep -nr cventry /home/nodraak/texmf/tex/latex/moderncv/moderncvstyleclassic.sty -A 9
+\renewcommand*{\cventry}[7][.25em]{%
+  \cvitem[#1]{#2}{%
+    \ifx&#7&%
+      \else{\begin{minipage}[t]{\linewidth}\small#7\end{minipage}\newline{}}\fi%
+    {\bfseries#3}%
+    \ifthenelse{\equal{#4}{}}{}{, {\slshape#4}}%
+    \ifthenelse{\equal{#5}{}}{}{, #5}%
+    \ifthenelse{\equal{#6}{}}{}{, #6}%
+    .\strut%
+  }%
+}
+
 % arguments: date, job title, company, comment, description
 \newcommand{\mycventry}[5]{\cventry{#1}{#2}{\textsc{#3}}{\textit{#4}}{}{#5}}
 
@@ -62,7 +77,7 @@
 
 % \subsection{Études}
 \cventry{2013 - 2018 \\ \textit{En cours d'obtention}}{Diplôme d'ingénieur, majeure systèmes embarqués}{}{}{}{ECE Paris, école d'ingénieurs - Paris, France}
-\cventry{2016}{Bachelor of Science en électronique}{}{}{}{Université d'Aalborg, département d'électronique - Aalborg, Danemark}
+\cventry{2016}{Bachelor of Science in electronics \& IT}{}{}{}{Université d'Aalborg, département d'électronique - Aalborg, Danemark}
 %\cventry{Août 2013}{Concours d'entrée de l'école 42 réussi}{}{}{}{École 42 - Paris, France}
 % \cventry{2013}{Baccalauréat}{Série scientifique, spécialité mathématiques}{}{}{Lycée St Dominique - Neuilly-sur-Seine, France}{}
 
@@ -70,7 +85,7 @@
 \mysection{Expérience}
 %------------------------------------------------------------------------------
 
-\subsection{Expérience rémunérée}
+\subsection{Expériences rémunérées}
 
 \mycventry{Mai à août 2017}
     {Stage}
@@ -88,13 +103,13 @@
     {Université d'Aalborg (Danemark)}
     {Développement d'une voiture en réalité virtuelle avec un Oculus Rift}
 
-\subsection{Autres expérience pertinentes}
+\subsection{Expériences non rémunérées}
 
 \mycventry{2016-2017}
-    {Mandat associatif (président)}
+    {Président}
     {iTeam}
     {Association étudiante de promotion du logiciel libre}
-    {Coordination des 7 administrateurs dans un contexte de gestion associative}
+    {Organisation d'événements et conférences}
 \mycventry{2016-2017}
     {Projet en équipe}
     {ECE Paris}
@@ -121,7 +136,7 @@
 
 % open source: pdp, zds, munin, doc_python_fr, classrooms, mbed
 
-\mycvitemwithcomment{Programmation}{C et C++}{Bas niveau (sockets, threads), GUI (SDL), microcontrôleurs embarqués.}
+\mycvitemwithcomment{Programmation}{C et C++}{Bas niveau, GUI et microcontrôleurs embarqués.}
 \mycvitemwithcomment{}{Python}{Django, Scipy, requests, OpenCV, Tensorflow.}
 % \mycvitemwithcomment{}{Asm x86}{Reverse engineering de binaires et conception des systèmes d'exploitation.}
 
@@ -152,7 +167,7 @@
 
 \placetextbox{0.94}{0.18}{
   \tiny{
-    Version~-~\input{|"git rev-parse --short HEAD"}~-~\today
+    Version~-~\input{|"git rev-parse --short HEAD"}-web~-~\today
   }
 }
 
