Add cubesat project

--- a/en.tex
+++ b/en.tex
@@ -4,7 +4,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage[english]{babel}
-\usepackage[scale=0.88]{geometry}
+\usepackage[scale=0.89]{geometry}
 \usepackage[yyyymmdd]{datetime}  % format \today
 \usepackage[pscoord]{eso-pic}  % \placetextbox
 
@@ -88,12 +88,12 @@
 
 \subsection{Technical Skills}
 
-\mycvitemwithcomment{Programming skills}{C and C++}{Low level, GUI and embedded microcontrolers.}
+\mycvitemwithcomment{Programming skills}{C and C++}{Low level, GUI and embedded microcontrollers.}
 \mycvitemwithcomment{}{Python}{Django, Scipy, requests, OpenCV, Tensorflow.}
 % \mycvitemwithcomment{}{Asm x86}{Reverse engineering and operating systems study.}
 
 \mycvitemwithcomment{Electronics}{PCB design, printing and soldering}{}
-\mycvitemwithcomment{}{Microcontrolers: ARM (STM32 with mbed), AVR (Arduino), PIC (Microchip)}{}
+\mycvitemwithcomment{}{Microcontrollers: ARM (STM32 with mbed), AVR (Arduino), PIC (Microchip)}{}
 
 \mycvitemwithcomment{System administration}{Linux (Ubuntu and Debian)}{}
 \mycvitemwithcomment{}{Containers (Docker), monitoring (Munin)}{}
@@ -120,7 +120,7 @@
     {Internship}
     {Future Electronics}
     {Electronic components distributor - Paris (France)}
-    {Development with PSoC 6 (microcontroler from Cypress)}
+    {Development with PSoC 6 (microcontroller from Cypress)}
 \mycventry{July and August 2016}
     {Internship}
     {WePulsit}
@@ -134,6 +134,11 @@
 
 \subsection{Other Relevant Experience}
 
+\mycventry{2017-2018}
+    {Team project}
+    {ECE Paris}
+    {Coordinated project with 25 students}
+    {Design and build a satellite (cubesat) in order to study a desorbit technique}
 \mycventry{2016-2017}
     {President}
     {iTeam}
