--- a/fr.tex
+++ b/fr.tex
@@ -4,7 +4,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage[french]{babel}
-\usepackage[scale=0.88]{geometry}
+\usepackage[scale=0.89]{geometry}
 \usepackage[yyyymmdd]{datetime}  % format \today
 \usepackage[pscoord]{eso-pic}  % \placetextbox
 
@@ -52,10 +52,9 @@
 \firstname{Adrien}
 \familyname{CHARDON}
 
-\title{
-  Étudiant ingénieur passionné d'informatique et \newline
-  d'électronique, disponible à partir de mars 2018 \newline
-  pour un stage de fin d'études de six mois
+\title{\large
+  Étudiant ingénieur passionné d'informatique et d'électronique, \newline
+  disponible à partir de mars 2018 pour un stage de fin d'études de six mois
 }
 %\address{}
 \email{adrienchardon AT mailoo.org}
@@ -105,6 +104,11 @@
 
 \subsection{Expériences non rémunérées}
 
+\mycventry{2017-2018}
+    {Projet en équipe}
+    {ECE Paris}
+    {Projet coordonné avec 25 étudiants}
+    {Conception et réalisation d'un satellite (cubesat) pour étudier une technique de désorbitation}
 \mycventry{2016-2017}
     {Président}
     {iTeam}
