Update gitignore, add missing space and add example .patch

--- a/fr.tex
+++ b/fr.tex
@@ -171,7 +171,7 @@
 
 \placetextbox{0.94}{0.18}{
   \tiny{
-    Version~-~\input{|"git rev-parse --short HEAD"}-web~-~\today
+    Version~-~\input{|"git rev-parse --short HEAD"}-~web~-~\today
   }
 }
 
