--- a/en.tex
+++ b/en.tex
@@ -61,9 +61,9 @@
   and computer science. Available for a 6 months \newline
   internship starting in March 2019.
 }
-%\address{}
-\email{adrienchardon AT mailoo.org}
-%\mobile{}
+\address{PLACEHOLDER_ADDRESS1_EN}{PLACEHOLDER_ADDRESS2_EN}
+\email{PLACEHOLDER_EMAIL}
+\mobile{PLACEHOLDER_MOBILE}
 \homepage{https://nodraak.fr}
 \social[github]{https://github.com/Nodraak}
 %\extrainfo{Born on January 30, 1995} % no birthday if us
@@ -139,7 +139,7 @@
 
 \placetextbox{0.94}{0.18}{\rotatebox[origin=c]{90}{
     \tiny{
-        Version~-~\input{|"git rev-parse --short HEAD"}-~web~-~\today
+        Version PLACEHOLDER_VERSION_EN - \today - \input{|"git rev-parse --short HEAD"}
     }
 }}
 
