--- a/fr.tex
+++ b/fr.tex
@@ -60,9 +60,9 @@
   Étudiant ingénieur passionné d'informatique et d'électronique. \newline
   Disponible à partir de mars 2019 pour un stage de fin d'études de six mois.
 }
-%\address{}
-\email{adrienchardon AT mailoo.org}
-%\mobile{}
+\address{PLACEHOLDER_ADDRESS1_FR}{PLACEHOLDER_ADDRESS2_FR}
+\email{PLACEHOLDER_EMAIL}
+\mobile{PLACEHOLDER_MOBILE}
 \homepage{https://nodraak.fr}
 \social[github]{https://github.com/Nodraak}
 \extrainfo{Né en 1995 (23 ans)}
@@ -138,7 +138,7 @@
 
 \placetextbox{0.94}{0.18}{\rotatebox[origin=c]{90}{
     \tiny{
-        Version~-~\input{|"git rev-parse --short HEAD"}-~web~-~\today
+        Version PLACEHOLDER_VERSION_FR - \today - \input{|"git rev-parse --short HEAD"}
     }
 }}
 
