Set font "sans" + update diplomas and internship

--- a/en.tex
+++ b/en.tex
@@ -1,5 +1,5 @@
 
-\documentclass[11pt, a4paper]{moderncv}
+\documentclass[11pt, a4paper, sans]{moderncv}
 
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -7,6 +7,10 @@
 \usepackage[scale=0.89]{geometry}
 \usepackage[yyyymmdd]{datetime}  % format \today
 \usepackage[pscoord]{eso-pic}  % \placetextbox
+
+\usepackage{mathpazo}  % Palatino font
+% \usepackage{kpfonts}
+% \usepackage{fontspec} \setmainfont{Corbel}
 
 \moderncvstyle{classic}
 \moderncvcolor{blue}
@@ -55,7 +59,7 @@
 \title{
   French engineer student fascinated by electronics \newline
   and computer science. Available for a 6 months \newline
-  internship starting in March 2018.
+  internship starting in March 2019.
 }
 %\address{}
 \email{adrienchardon AT mailoo.org}
@@ -75,8 +79,9 @@
 \mysection{Education}
 %------------------------------------------------------------------------------
 
-\cventry{2013 - 2018 \\ \textit{Pending}}{Engineering Degree, majoring in embedded systems}{}{}{}{ECE Paris - Paris, France}
-\cventry{2016}{Bachelor of Science in electronics \& IT}{}{}{}{Aalborg University, electronics department - Aalborg, Denmark}
+\cventry{2018 - 2019 \\ \textit{Pending}}{Advanced Master}{space systems design (TAS Astro)}{}{}{ISAE Supaero - Toulouse, France}
+\cventry{2013 - 2018}{Engineering Degree}{majoring in embedded systems}{}{}{ECE Paris - Paris, France}
+\cventry{2015 - 2016}{Bachelor of Science}{electronics \& IT}{}{}{Aalborg University, electronics department - Aalborg, Denmark}
 
 
 \mysection{Work Experience}
@@ -84,6 +89,11 @@
 
 \subsection{Employment Experience}
 
+\mycventry{March to August 2018}
+    {Internship}
+    {Communication \& Systèmes}
+    {-}
+    {-}
 \mycventry{May to August 2017}
     {Internship}
     {Future Electronics}
