--- a/fr.tex
+++ b/fr.tex
@@ -1,5 +1,5 @@
 
-\documentclass[11pt, a4paper]{moderncv}
+\documentclass[11pt, a4paper, sans]{moderncv}
 
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -7,6 +7,10 @@
 \usepackage[scale=0.89]{geometry}
 \usepackage[yyyymmdd]{datetime}  % format \today
 \usepackage[pscoord]{eso-pic}  % \placetextbox
+
+\usepackage{mathpazo}  % Palatino font
+% \usepackage{kpfonts}
+% \usepackage{fontspec} \setmainfont{Corbel}
 
 \moderncvstyle{classic}
 \moderncvcolor{blue}
@@ -54,14 +58,14 @@
 
 \title{\large
   Étudiant ingénieur passionné d'informatique et d'électronique. \newline
-  Disponible à partir de mars 2018 pour un stage de fin d'études de six mois.
+  Disponible à partir de mars 2019 pour un stage de fin d'études de six mois.
 }
 %\address{}
 \email{adrienchardon AT mailoo.org}
 %\mobile{}
 \homepage{https://nodraak.fr}
 \social[github]{https://github.com/Nodraak}
-\extrainfo{Né le 30 janvier 1995 (22 ans)}
+\extrainfo{Né en 1995 (23 ans)}
 
 % Content
 %------------------------------------------------------------------------------
@@ -74,8 +78,9 @@
 \mysection{Formation}
 %------------------------------------------------------------------------------
 
-\cventry{2013 - 2018 \\ \textit{En cours d'obtention}}{Diplôme d'ingénieur, majeure systèmes embarqués}{}{}{}{ECE Paris, école d'ingénieurs - Paris, France}
-\cventry{2016}{Bachelor of Science in electronics \& IT}{}{}{}{Université d'Aalborg, département d'électronique - Aalborg, Danemark}
+\cventry{2018 - 2019 \\ \textit{En cours d'obtention}}{Advanced Master}{space systems design (TAS Astro)}{}{}{ISAE Supaero - Toulouse, France}
+\cventry{2013 - 2018}{Diplôme d'ingénieur}{majeure systèmes embarqués}{}{}{ECE Paris, école d'ingénieurs - Paris, France}
+\cventry{2015 - 2016}{Bachelor of Science}{electronics \& IT}{}{}{Université d'Aalborg, département d'électronique - Aalborg, Danemark}
 
 
 \mysection{Expérience}
@@ -83,6 +88,11 @@
 
 \subsection{Expériences rémunérées}
 
+\mycventry{Mars à août 2018}
+    {Stage}
+    {Communication \& Systèmes}
+    {-}
+    {-}
 \mycventry{Mai à août 2017}
     {Stage}
     {Future Electronics}
